Closed Bug 1827003 Opened 2 years ago Closed 2 years ago

Slow message list quick filter

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

Thunderbird 113

Tracking

(thunderbird_esr102 unaffected, thunderbird112 unaffected, thunderbird113+ affected)

RESOLVED FIXED
114 Branch
Tracking Status
thunderbird_esr102 --- unaffected
thunderbird112 --- unaffected
thunderbird113 + affected

People

(Reporter: wsmwk, Assigned: darktrojan)

References

(Blocks 1 open bug)

Details

(Keywords: perf, regression, regressionwindow-wanted, Whiteboard: [Supernova3p])

Attachments

(2 files)

113.0a1 2023-04-06. Not a problem with 112.0b7. Mac. I don't know when the problem started on Daily.

  1. pick a large folder
  2. click the unread button in quick filter

Actual results - watch message list populate for several seconds. Performance profile https://share.firefox.dev/3KIayBs

Expected results - instantaneous message list

See Also: → 1820423

There's a good chance I just fixed this with bug 1817367.

See Also: → 1817367
Whiteboard: [Supernova] → [Supernova3p]

(In reply to Geoff Lankow (:darktrojan) from comment #1)

There's a good chance I just fixed this with bug 1817367.

Thanks. With daily It is better, but only if the result set is small - like if I pick star or attachment. If the filtered results set is large I see the same jerky, long slow message list populating. This is on fast Macbook M1, 2500 messages.

Flags: needinfo?(geoff)
See Also: → 1829948

On 113.0b5 Ubuntu 23.04 this still persists and is extreme. For example, on a very large Inbox with a lot of matches it took over 4 minutes while the display scrolls through all the matches. The same search in the same Inbox prior to beta is almost instantaneous with no noticeable scrolling through the matches.

Assignee: nobody → geoff
Status: NEW → ASSIGNED

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/ce8b1a51da8a
Stop the message list updating for every message found by quick filter. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Flags: needinfo?(geoff)
Target Milestone: --- → 114 Branch

Comment on attachment 9331086 [details]
Bug 1827003 - Stop the message list updating for every message found by quick filter. r=#thunderbird-reviewers

[Triage Comment]
Approved for 113.0beta

Attachment #9331086 - Flags: approval-comm-beta+

Comment on attachment 9331086 [details]
Bug 1827003 - Stop the message list updating for every message found by quick filter. r=#thunderbird-reviewers

Nope, I'm having this backed out until I can properly figure out what's going on with the test failures.

Attachment #9331086 - Flags: approval-comm-beta+ → approval-comm-beta-

Okay, so it's already landed on beta 6 but the bots failed to update the bug:
https://hg.mozilla.org/releases/comm-beta/rev/9af5b44606a7f38b6549ccb28035445200239a7b

I'm not sure how bad the problem that caused the test failures is. It's a real problem (not a test problem) but I don't think many people will be affected.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Sorry to have jumped on it. I had tested daily this morning and it performed flawlessly. And so far 113.0b6 does also.

But bug 1820423 is not any better afaict.

Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/cc49afb68d4e
follow-up - Clear thread tree flag when changing views. r=aleca

Status: REOPENED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → FIXED

ah, that's much better behaviour now, thank you very much indeed :)

Duplicate of this bug: 1829948
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: