Bug 1827003 - Stop the message list updating for every message found by quick filter. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D176892

--HG--
extra : rebase_source : c3fc3d9fa06a5e1321b5bd1758182da8e09a61e6
extra : amend_source : ff7bc826bbd8cc3be32749c1ffe2281220b9f561
extra : histedit_source : 2a054daca9271d0392d87ef9a02f9272f28e848c